Fix visibility og the help overlay

--- a/web/css/ui.css
+++ b/web/css/ui.css
@@ -1,6 +1,7 @@
 
-.hidden, [hidden] {
-    display: none !important;
+.hidden {
+    /*display: none;*/
+    visibility: hidden;
 }
 
 .modal-window {
